# transformers_for_vision

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  infer.py  pyproject.toml  train.py  tune_parameters.py
.dvc/: config
analysis/: __init__.py  sample_predictions.ipynb
artefacts/: .gitignore  satellite_image_classification_dataset.dvc
artefacts/checkpoint/: best_model.pth.dvc
artefacts/satellite_image_segmentation_dataset/: train.dvc  val.dvc
config/model/: unet.yaml
data/: data_loader_classifier.py  data_loader_segmentation.py
model/: callbacks.py  inference.py  loss.py  parameter_tuning.py  train.py  transformer.py  tune_params.py  unet.py  vit.py
tests/unit/data/: test_data_loader_classifier.py  test_data_loader_segmentation.py
utils/: config_parser.py  configure_logger.py  metrics.py  utils.py
