[tool.poetry]
name = "transformers-for-vision"
version = "0.1.0"
description = "Simple computer vision illustrations using transformer models"
authors = ["Renjith <renjithbaby23@gmail.com>"]
readme = "README.md"
packages = [{include = "transformers_for_vision"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
numpy = "^1.24.1"
pre-commit = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
